--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-# зависимости не зранят в репозитории
+# зависимости не хранят в репозитории
 # игнорирование директории .venv
 .venv/
+
+# игнорирование кэш
+__pycache__
